infra/k8s/customer-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-mongo-depl
spec:
    replicas: 1
    selector:
      matchLabels:
        app: customer-mongo
    template:
      metadata:
        labels:
          app: customer-mongo
      spec:
        containers:
          - name: customer-mongo
            image: mongo
            resources:
              limits:
                memory: "512Mi"
                cpu: "500m"
              requests:
                memory: "256Mi"
                cpu: "250m"
        
---
apiVersion: v1
kind: Service
metadata:
  name: customer-mongo-srv
spec:
  selector:
      app: customer-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
