infra/k8s/email-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-depl
  labels:
    app: email
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email
  template:
    metadata:
      labels:
        app: email
    spec:
      containers:
        - name: email
          image: project-a/email
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: email-srv
spec:
  selector:
    app: email
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
