infra/k8s/emp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emp-deployment
  labels:
    app: emp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emp
  template:
    metadata:
      labels:
        app: emp
    spec:
      containers:
        - name: emp
          image: project-a/employer
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: emp-srv
spec:
  selector:
    app: emp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
