infra/k8s/inovice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice
  template:
    metadata:
      labels:
        app: invoice
    spec:
      containers:
        - name: invoice
          image: project-a/invoice
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: invoice-srv
spec:
  selector:
    app: invoice
  ports:
    - name: invoice
      protocol: TCP
      port: 3000
      targetPort: 3000
