infra/k8s/notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notif-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notif
  template:
    metadata:
      labels:
        app: notif
    spec:
      containers:
        - name: notification
          image: project-a/notification
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: notif-srv
spec:
  selector:
    app: notif
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
