infra/k8s/payment-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-mongo
  template:
    metadata:
      labels:
        app: payment-mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-mongo-srv
spec:
  selector:
    app: payment-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
