infra/k8s/task-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task
  template:
    metadata:
      labels:
        app: task
    spec:
      containers:
        - name: task
          image: project-a/task
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: task-srv
spec:
  selector:
    app: task
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
