infra/k8s/xlsx-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xlsx-depl
  labels:
    app: xlsx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xlsx
  template:
    metadata:
      labels:
        app: xlsx
    spec:
      containers:
        - name: xlsx
          image: project-a/xlsx
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: xlsx-srv
spec:
  selector:
    app: xlsx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
