infra/k8s/xlsx-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xlsx-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xlsx-mongo
  template:
    metadata:
      labels:
        app: xlsx-mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: xlsx-mongo-srv
spec:
  selector:
    app: xlsx-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
