infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: tickets.dev
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/customer/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: customer-srv
                port:
                  number: 3000
          - path: /api/order/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-srv
                port:
                  number: 3000
          - path: /api/product/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-srv
                port:
                  number: 3000
          - path: /api/emp/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: emp-srv
                port:
                  number: 3000
          - path: /api/exp/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: exp-srv
                port:
                  number: 3000
          - path : /api/notif/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notif-srv
                port:
                  number: 3000
          - path: /api/payment/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-srv
                port:
                  number: 3000
          - path: /api/invoice/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: invoice-srv
                port:
                  number: 3000
          - path: /api/xlsx/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: xlsx-srv
                port:
                  number: 3000
          - path: /api/chart/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chart-srv
                port:
                  number: 3000
